--- a/package.json
+++ b/package.json
@@ -8,11 +8,18 @@
         "start": "next start",
         "lint": "next lint"
     },
+    "packageManager": "bun@1.1.42",
+    "overrides": {
+        "react": "$react",
+        "react-dom": "$react-dom"
+    },
     "dependencies": {
         "@sentry/nextjs": "^8.47.0",
         "next": "15.1.2",
+        "next-auth": "^5.0.0-beta.25",
         "react": "^19.0.0",
-        "react-dom": "^19.0.0"
+        "react-dom": "^19.0.0",
+        "zod": "^3.24.1"
     },
     "devDependencies": {
         "typescript": "^5",
