--- a/package.json
+++ b/package.json
@@ -15,10 +15,16 @@
     },
     "dependencies": {
         "@sentry/nextjs": "^8.47.0",
+        "@tailwindcss/typography": "^0.5.15",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "lucide-react": "^0.469.0",
         "next": "15.1.2",
         "next-auth": "^5.0.0-beta.25",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
+        "tailwind-merge": "^2.6.0",
+        "tailwindcss-animate": "^1.0.7",
         "zod": "^3.24.1"
     },
     "devDependencies": {
