--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     },
     "dependencies": {
         "@radix-ui/react-slot": "^1.1.1",
+        "@sanity/image-url": "1",
+        "@sanity/vision": "3",
         "@sentry/nextjs": "^8.47.0",
         "@tailwindcss/typography": "^0.5.15",
         "class-variance-authority": "^0.7.1",
@@ -22,8 +24,11 @@
         "lucide-react": "^0.469.0",
         "next": "15.1.2",
         "next-auth": "^5.0.0-beta.25",
+        "next-sanity": "^9.8.29-canary.0",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
+        "sanity": "3",
+        "styled-components": "6",
         "tailwind-merge": "^2.6.0",
         "tailwindcss-animate": "^1.0.7",
         "zod": "^3.24.1"
