--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
         "@sanity/vision": "3",
         "@sentry/nextjs": "^8.47.0",
         "@tailwindcss/typography": "^0.5.15",
+        "@types/markdown-it": "^14.1.2",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "lucide-react": "^0.469.0",
+        "markdown-it": "^14.1.0",
         "next": "^15.2.0-canary.13",
         "next-auth": "^5.0.0-beta.25",
         "next-sanity": "^9.8.29-canary.0",
