--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     },
     "dependencies": {
         "@radix-ui/react-slot": "^1.1.1",
+        "@radix-ui/react-toast": "^1.2.5",
         "@sanity/image-url": "1",
         "@sanity/vision": "3",
         "@sentry/nextjs": "^8.47.0",
         "@tailwindcss/typography": "^0.5.15",
         "@types/markdown-it": "^14.1.2",
+        "@uiw/react-md-editor": "^4.0.5",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "lucide-react": "^0.469.0",
